1.6.8 RC3
---
- applied submitted patch #1645286. patch for reading X offset and Y offset from TIFF files.
- fixed lump reading bug. from Bjürn Ganster
- Fixed gif loading patched from Bjürn Ganster
- Fixed bug #1643309.  wrong buffer size on ilSaveL with IL_BMP
- Fixed some iluCompareImage patched from James Kirkpatrick
- Fixed many security holes patched from Bjürn Ganster
- fixed bug #1637588. iMemSwap bugs
- fixed bug #1634099. Infinite loop on corrupt JPEG
- applied submitted patch #1632474. GIF loading fails on incomplete images
- applied patch #1612477. _UNICODE / UNICODE fixes. more win32 unicode fixes.
- TIFF compression method changed to LZW
- added the DEPRECATED macro and deprecated iluGenImage and iluDeleteImage
- glCompress2DARB now works with OS X too.
- incorporated patches from debian.
- Added support for non power of 2 texture loading (if available)
- fixed bug #1609417. Bug in iluGetImageInfo
- iGetIntegervImage(IL_IMAGE_CHANNELS) now returns a correct value
- fixed bug #1561642. ILstring is poorly implemented (w.r.t const and others)
- fixed bug #1562955. PSD 16 bits
- ilInit and ilShutdown can now be called more then one times or shutdown even if not initialized without crashing anything.
- fixed bug #662903 ilBlit result incorrect when source is not (0,0)
- internal clamp functions now are macros
- ilSetAlpha now returns a boolean value since it can fail
- fixed an error in the configure script were breaking compilation if libpng-config wasn't in the path
- applied submitted patch #1550471. missing const in il_tiff.c
- fixed bug #1554447. broken bmp loading with less then 256 color and a palette
- applied submitted patch #1554358. headers fixes

1.6.8 RC2
-----
- applied submitted patch #1539074. Fixes some bugs with paletted images, adds iluScaleAlpha (from jbitnet)
- fixed OpenGL loading
- altivec code is now merged inside IL sources, not on a separate directory
- more dds fixes